# deepl_bot

./: README.md  pyproject.toml
deep/: __init__.py  main.py
deep/db_usage/: __init__.py  db_run.py  manage.py  methods.py  models.py
