[tool.poetry]
name = "deep"
version = "0.1.0"
description = "Bot deepl"
authors = ["Daniil Frolov <frolofelo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telebot = "^0.0.5"
deepl = "^1.15.0"
sqlalchemy = "^2.0.21"
sqlalchemy-utils = "^0.41.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
